syntax = "proto3";

package api;

option go_package = "github.com/nttv2709/remy";
import "google/protobuf/timestamp.proto";

service CalendarService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventReply) {}
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventReply) {}
    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventReply) {} 
    rpc ListEvents(ListEventsRequest) returns (ListEventsReply) {}
    rpc GetRemind(GetRemindRequest) returns (GetRemindReply) {}
}

message RangeTime {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message Event {
    int64 id = 1;
    string title = 2;
    RangeTime range_time = 3;
    Location location = 4;
}

message ListEvents {
    repeated Event event = 1;
    google.protobuf.Timestamp time = 2;
}

message Location {
    float x = 1;
    float y = 2;
}

message CreateEventRequest {
    string title = 1;
    RangeTime range_time = 2;
    Location location = 3;
}

message CreateEventReply {
    int64 id = 1;
}

message ListEventsRequest {
    RangeTime range_time = 1;
    DATE_TYPE date_type = 2;

    enum DATE_TYPE {
        DAY = 0;
        MONTH = 1;
        YEAR = 2;
    }
}

message ListEventsReply {
    repeated ListEvents list_events = 1;
}

message GetRemindRequest {
    Location location = 1;
}

message GetRemindReply {
    google.protobuf.Timestamp time = 1;
    bool okay = 2;
}

message UpdateEventRequest {
    Event event = 1;
}

message UpdateEventReply {}

message DeleteEventRequest {
    int64 id = 1;
}

message DeleteEventReply {}